--- a/about.html
+++ b/about.html
@@ -46,19 +46,15 @@
         <div class="col text-right">
             <div class="social-media">
                 <div class="social-link-holder">
-                    <img alt='' className='navbar-links-icons-navbar' style="height: 1.4rem; width: auto; margin-right: 0.5rem; background-color: white; border-radius: 15px;" src='./Assets/images/HomeImages/vimeo.jpg' />
                     <a class="nav-a" target="_blank" href="https://vimeo.com/shadedfeather">Vimeo</a>
                 </div>
                 <div class="social-link-holder">
-                    <img alt='' className='navbar-links-icons-navbar' style="height: 1.4rem; width: auto; margin-right: 0.5rem; border-radius: 15px;" src='./Assets/images/HomeImages/instagram.jpg' />
                     <a class="nav-a" target="_blank" href="https://www.instagram.com/theshadedfeather/">Instagram</a>
                 </div>
                 <div class="social-link-holder">
-                    <img alt='' className='navbar-links-icons-navbar' style="height: 1.4rem; width: auto; margin-right: 0.5rem; border-radius: 15px;" src='./Assets/images/HomeImages/linkedin.jpg' />
                     <a class="nav-a" target="_blank" href="https://www.linkedin.jpg/company/shaded-feather-productions/mycompany/">LinkedIn</a>
                 </div>
                 <div class="social-link-holder">
-                    <img alt='' className='navbar-links-icons-navbar' style="height: 1.4rem; width: auto; margin-right: 0.5rem; border-radius: 15px;" src='./Assets/images/HomeImages/fb.jpg' />
                     <a class="nav-a" target="_blank" href="https://www.facebook.com/shadedfeather/">Facebook</a>
                 </div>
             </div>
@@ -75,45 +71,90 @@
         </div>
     </div>
 </header>
-<div class="container-fluid process-section">
+<div class="container-fluid other-content" style="background-color: white;">
     <div class="row">
         <div class="col">
-            <div class="lg-text"><span class="other-color">our process</span></div>
+            <div class="lg-text" style="color:#FFBC59">the story</div>
+            <div class="normal-text">
+                <p class="description" style="color:black">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta assumenda incidunt vitae fuga. Deleniti nisi assumenda exercitationem doloribus nobis, cumque illum sint adipisci corporis culpa officia nesciunt illo dolores deserunt.</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container-fluid process-section" style="background-color: #232931; color: #E6EEEC;">
+    <div class="row">
+        <div class="col">
+            <div class="lg-text" style="text-align: center; margin-bottom: 5rem;"><span class="other-color">the process</span></div>
         </div>
     </div>
     <div class="row">
         <div class="col-md-3">
             <div class="text-box">
                 <div class="title">Write</div>
-                <p>The Process of Brainstorming to Conceptualising to come up with creative ideas and to connect the dots with Brand briefs accurately gives us one -upmanship in the market. And we have an in-house creative team which gets it right for you.</p>
+                <p style="color: #E6EEEC;">The Process of Brainstorming to Conceptualising to come up with creative ideas and to connect the dots with Brand briefs accurately gives us one -upmanship in the market. And we have an in-house creative team which gets it right for you.</p>
             </div>
         </div>
         <div class="col-md-3">
             <div class="text-box">
                 <div class="title">Shoot</div>
-                <p>Framing Films that speak to the audience, get their attention and reside in their mind is our goal and we make our concept with such intricate details that Filming becomes fun and exciting. From table to frame we know where to aim.</p>
+                <p style="color: #E6EEEC;">Framing Films that speak to the audience, get their attention and reside in their mind is our goal and we make our concept with such intricate details that Filming becomes fun and exciting. From table to frame we know where to aim.</p>
             </div>
         </div>
         <div class="col-md-3">
             <div class="text-box">
                 <div class="title">Edit</div>
-                <p>All said and done, here we come. We hold the bigger flag when we say we understand the timelines and we have an in-house post production team which creates magic with their fingertips and in due time. Edits- ColourGrading- DI- CG- Animation. Delivering the Film at the right time is what makes the process smooth and our clients happy.</p>
+                <p style="color: #E6EEEC;">All said and done, here we come. We hold the bigger flag when we say we understand the timelines and we have an in-house post production team which creates magic with their fingertips and in due time. Edits- ColourGrading- DI- CG- Animation. Delivering the Film at the right time is what makes the process smooth and our clients happy.</p>
             </div>
         </div>
         <div class="col-md-3">
             <div class="text-box">
                 <div class="title">Release</div>
-                <p><strong style="font-weight: bolder;">All There is, I believe is the effort to bring the Film to Release</strong> Delivering the Film at the right time is what makes the process smooth and our clients
+                <p style="color: #E6EEEC;"><strong style="font-weight: bolder;">All There is, I believe is the effort to bring the Film to Release</strong> Delivering the Film at the right time is what makes the process smooth and our clients
                     happy. </p>
             </div>
         </div>
     </div>
 </div>
 <div class="team-div">
-<div class="extra-lg-text team-heading" style="margin-bottom: 0rem;">
-    <span style="color: #FFBC59;"> <span style="color: white;">team</span><br>shaded feather</span>
+    <div class="extra-lg-text team-heading">
+        <span style="color: black;">the</span><br><span style="color: #FFBC59;">team</span>
+    </div>
+  <ul class="ul-div-team">
+    <li class="li-team team-1">
+      <span><img class="img-carousel" src="./Assets/images/AboutImages/a.png" alt=""></span>
+      <div class="data-div-team">
+        <p class="name">Name</p>
+        <p class="role">Role</p>
+        <p class="description-1">Lorem ipsum dolor sit <br>amet consectetur adipisicing</p>
+      </div>
+    </li>
+    <li class="li-team team-2">
+      <span><img class="img-carousel" src="./Assets/images/AboutImages/b.png" alt=""></span>
+      <div class="data-div-team">
+        <p class="name">Name</p>
+        <p class="role">Role</p>
+        <p class="description-2">Lorem ipsum dolor sit <br>amet consectetur adipisicing</p>
+      </div>
+    </li>
+    <li class="li-team team-3">
+      <span><img class="img-carousel" src="./Assets/images/AboutImages/c.jpeg" alt=""></span>
+      <div class="data-div-team">
+        <p class="name">Name</p>
+        <p class="role">Role</p>
+        <p class="description-3">Lorem ipsum dolor sit <br>amet consectetur adipisicing</p>
+      </div>
+    </li>
+    <li class="li-team team-4">
+      <span><img class="img-carousel" src="./Assets/images/AboutImages/d.png" alt=""></span>
+      <div class="data-div-team">
+        <p class="name">Name</p>
+        <p class="role">Role</p>
+        <p class="description-4">Lorem ipsum dolor sit <br>amet consectetur adipisicing</p>
+      </div>
+    </li>
+  </ul>
 </div>
-<section class="carousel">
+<!-- <section class="carousel">
     <div class="carousel__slider">
       <ul class="carousel__list">
         <li class="carousel__item">
@@ -150,12 +191,12 @@
         </li>
       </ul>
     </div>
-  </section>
+  </section> -->
 </div>
 <div class="container-fluid other-content">
     <div class="row">
         <div class="col">
-            <div class="lg-text">have a project<br>for us?</div>
+            <div class="lg-text">got a brief<br>for us?</div>
             <div class="normal-text">
                 <p class="description">We'll take your campaign to the next level, with our proven planning, Structuring and friendly creatives that will work to produce the best out of the box outcome possible.</p>
             </div>
