--- a/animations.html
+++ b/animations.html
@@ -36,72 +36,41 @@
     </div>
 </div>
 <div class="complete-films">
-  <div class="photos-side-headings">Maruti Suzuki</div>
-  <div class="videos-grid-div">
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/617052578?h=c2cebcac4c" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/610579211?h=2bf8038b84" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
+  <div class="photos-side-headings" style="text-align: center;">animations and cg</div>
+  <div class="animations-grid-div">
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/617123459?h=f6dd03766e" loading="lazy" class="iframe-animations" frameborder="0" allowfullscreen></iframe>
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/617116975?h=916b9b3c36" loading="lazy" class="iframe-animations" frameborder="0" allowfullscreen></iframe>
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/460260701?h=cc5af39ed8" loading="lazy" class="iframe-animations" frameborder="0" allowfullscreen></iframe>
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/643211335?h=b988ade06c" loading="lazy" class="iframe-animations" frameborder="0" allowfullscreen></iframe>
   </div>
-  <div class="photos-side-headings">Whirpool</div>
-  <div class="videos-grid-div">
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/460260701?h=cc5af39ed8" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/617088284?h=ffe0064ca6" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-  </div>
-  <div class="photos-side-headings">Philips</div>
-  <div class="videos-grid-div">
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/228360841?h=ac5424bb7f" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/345890223?h=e80f562467" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-  </div>
-  <div class="photos-side-headings">HDFC</div>
-  <div class="videos-grid-div">
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/354986118?h=620b619fb8" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-  </div>
-  <div class="photos-side-headings">Adani</div>
-  <div class="videos-grid-div">
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/324597790?h=ea97640113" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-  </div>
-  <div class="photos-side-headings">Himalaya</div>
-  <div class="videos-grid-div">
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/280908889?h=338af54e18" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-  </div>
-  <div class="photos-side-headings">JSW</div>
-  <div class="videos-grid-div">
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/373565717?h=b46b309147" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-  </div>
-  <div class="photos-side-headings">Duroflex</div>
-  <div class="videos-grid-div">
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/345890415?h=eebef02971" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-  </div>
-  <div class="photos-side-headings">Lenskart</div>
-  <div class="videos-grid-div">
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/382590816?h=e71dc327db" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-  </div>
-  <div class="photos-side-headings">Canon</div>
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/643211335?h=b988ade06c" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-  <div class="videos-grid-div">
-  </div>
-  <div class="photos-side-headings">Panasonic</div>
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/708812445?h=3d330afbf2" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-  <div class="videos-grid-div">
-  </div>
-  <div class="photos-side-headings">Noise</div>
-  <div class="videos-grid-div">
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/784985820?h=2f81c43a46" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-  </div>
-  <div class="photos-side-headings">American Pride</div>
-  <div class="videos-grid-div">
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/731026854?h=a81e20d6f6" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-  </div>
-  <div class="photos-side-headings">Imperial Blue</div>
-  <div class="videos-grid-div">
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/617105779?h=90abc715db" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-  </div>
-  <div class="photos-side-headings">100 Pipers</div>
-  <div class="videos-grid-div">
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/617104600?h=bdf5717856" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-  </div>
-  <div class="photos-side-headings">Blenders Pride</div>
-  <div class="videos-grid-div">
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/617105616?h=2ad44e8562" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
+  <div class="photos-grid-div animations-div-2">
+    <div class="">
+        <img class="img-project" src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 4.12.47 PM.png" alt="">
+    </div>
+    <div class="">
+        <img class="img-project" src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 4.13.25 PM.png" alt="">
+    </div>
+    <div class="">
+        <img class="img-project" src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 4.13.52 PM.png" alt="">
+    </div>
+    <div class="">
+        <img class="img-project" src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 4.17.40 PM.png" alt="">
+    </div>
+    <div class="">
+        <img class="img-project" src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 4.17.57 PM.png" alt="">
+    </div>
+    <div class="">
+        <img class="img-project" src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 4.18.13 PM.png" alt="">
+    </div>
+    <div class="">
+        <img class="img-project" src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 4.18.54 PM.png" alt="">
+    </div>
+    <div class="">
+        <img class="img-project" src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 4.19.06 PM.png" alt="">
+    </div>
+    <div class="">
+        <img class="img-project" src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 4.19.17 PM.png" alt="">
+    </div>
   </div>
 </div>
 <div class="container-fluid other-content">
