--- a/index.html
+++ b/index.html
@@ -40,19 +40,15 @@
         <div class="col text-right">
             <div class="social-media">
                 <div class="social-link-holder">
-                    <img alt='' className='navbar-links-icons-navbar' style="height: 1.4rem; width: auto; margin-right: 0.5rem; background-color: white; border-radius: 15px;" src='./Assets/images/HomeImages/vimeo.jpg' />
                     <a class="nav-a" target="_blank" href="https://vimeo.com/shadedfeather">Vimeo</a>
                 </div>
                 <div class="social-link-holder">
-                    <img alt='' className='navbar-links-icons-navbar' style="height: 1.4rem; width: auto; margin-right: 0.5rem; border-radius: 15px;" src='./Assets/images/HomeImages/instagram.jpg' />
                     <a class="nav-a" target="_blank" href="https://www.instagram.com/theshadedfeather/">Instagram</a>
                 </div>
                 <div class="social-link-holder">
-                    <img alt='' className='navbar-links-icons-navbar' style="height: 1.4rem; width: auto; margin-right: 0.5rem; border-radius: 15px;" src='./Assets/images/HomeImages/linkedin.jpg' />
                     <a class="nav-a" target="_blank" href="https://www.linkedin.jpg/company/shaded-feather-productions/mycompany/">LinkedIn</a>
                 </div>
                 <div class="social-link-holder">
-                    <img alt='' className='navbar-links-icons-navbar' style="height: 1.4rem; width: auto; margin-right: 0.5rem; border-radius: 15px;" src='./Assets/images/HomeImages/fb.jpg' />
                     <a class="nav-a" target="_blank" href="https://www.facebook.com/shadedfeather/">Facebook</a>
                 </div>
             </div>
@@ -169,7 +165,7 @@
                 <span>clients who've</span><br>
                 <span>written us cheques</span><br>
             </div>
-            <marquee style="height: 15rem;" scrollamount="7" behavior="scroll" direction="up">
+            <marquee style="height: 21rem;" scrollamount="7" behavior="scroll" direction="up">
             <div class="">
             <div class="clients-div">
                 <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/1Electronics/2Panasonic.png" alt=""></div>
@@ -235,7 +231,7 @@
 <div class="container-fluid other-content">
     <div class="row">
         <div class="col">
-            <div class="lg-text">have a project<br>for us?</div>
+            <div class="lg-text">got a brief<br>for us?</div>
             <div class="normal-text">
                 <p class="description">Get in touch with us and we will get the wheels rolling</p>
             </div>
