--- a/photography.html
+++ b/photography.html
@@ -34,49 +34,67 @@
     </div>
 </div>
 <div class="complete-project">
-    <div class="photos-side-headings">Oppo</div>
+    <div class="photos-side-headings">photography</div>
     <div class="photos-grid-div">
-        <div class="">
-            <img class="img-project" src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 4.12.47 PM.png" alt="">
+        <div class="container-fluid box-content">
+            <div class="">
+                <div class="">
+                    <div class="boxy img-box">
+                        <div class="img video-div">
+                            <img class="img-project" src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 4.13.25 PM.png" alt="">
+                        </div>
+                        <div class="bottom-text">
+                            <div class="link">oppo</div>
+                        </div>
+                        <a href="#" class="project-link-full"></a>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="">
-            <img class="img-project" src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 4.13.25 PM.png" alt="">
+        <div class="container-fluid box-content">
+            <div class="">
+                <div class="">
+                    <div class="boxy img-box">
+                        <div class="img video-div">
+                            <img class="img-project" src="./Assets/wetransfer_images_2023-01-16_1340/Images/img14.png" alt="">
+                        </div>
+                        <div class="bottom-text">
+                            <div class="link">blenders pride</div>
+                        </div>
+                        <a href="#" class="project-link-full"></a>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="">
-            <img class="img-project" src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 4.13.52 PM.png" alt="">
+        <div class="container-fluid box-content">
+            <div class="">
+                <div class="">
+                    <div class="boxy img-box">
+                        <div class="img video-div">
+                            <img class="img-project" src="./Assets/wetransfer_images_2023-01-16_1340/Images/img17.png" alt="">
+                        </div>
+                        <div class="bottom-text">
+                            <div class="link">royal stag</div>
+                        </div>
+                        <a href="#" class="project-link-full"></a>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="">
-            <img class="img-project" src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 4.17.40 PM.png" alt="">
-        </div>
-        <div class="">
-            <img class="img-project" src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 4.17.57 PM.png" alt="">
-        </div>
-        <div class="">
-            <img class="img-project" src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 4.18.13 PM.png" alt="">
-        </div>
-        <div class="">
-            <img class="img-project" src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 4.18.54 PM.png" alt="">
-        </div>
-        <div class="">
-            <img class="img-project" src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 4.19.06 PM.png" alt="">
-        </div>
-        <div class="">
-            <img class="img-project" src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 4.19.17 PM.png" alt="">
-        </div>
-        <div class="">
-            <img class="img-project" src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 5.44.15 PM.png" alt="">
-        </div>
-        <div class="">
-            <img class="img-project" src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 5.44.28 PM.png" alt="">
-        </div>
-        <div class="">
-            <img class="img-project" src="" alt="">
-        </div>
-    </div>
-    <div class="photos-side-headings">imperial  blue</div>
-    <div class="photos-grid-div">
-        <div class="">
-            <img class="img-project" src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 5.48.33 PM.png" alt="">
+        <div class="container-fluid box-content">
+            <div class="">
+                <div class="">
+                    <div class="boxy img-box">
+                        <div class="img video-div">
+                            <img class="img-project" src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 4.18.13 PM.png" alt="">
+                        </div>
+                        <div class="bottom-text">
+                            <div class="link">oppo</div>
+                        </div>
+                        <a href="#" class="project-link-full"></a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
