--- a/work.html
+++ b/work.html
@@ -38,26 +38,22 @@
 <nav class="container-fluid cnav">
     <div class="row">
         <div class="col">
-            <div class="logo-holder other-pages-nav">
+            <div class="other-pages-nav">
                 <a href="index.html"><img class="logo-other-pages" src="./Assets/images/Logo/logo.png" alt="shaded feather logo"></a>
             </div>
         </div>
         <div class="col text-right">
             <div class="social-media">
                 <div class="social-link-holder">
-                    <img alt='' className='navbar-links-icons-navbar' style="height: 1.4rem; width: auto; margin-right: 0.5rem; background-color: white; border-radius: 15px;" src='./Assets/images/HomeImages/vimeo.jpg' />
                     <a class="nav-a" target="_blank" href="https://vimeo.com/shadedfeather">Vimeo</a>
                 </div>
                 <div class="social-link-holder">
-                    <img alt='' className='navbar-links-icons-navbar' style="height: 1.4rem; width: auto; margin-right: 0.5rem; border-radius: 15px;" src='./Assets/images/HomeImages/instagram.jpg' />
                     <a class="nav-a" target="_blank" href="https://www.instagram.com/theshadedfeather/">Instagram</a>
                 </div>
                 <div class="social-link-holder">
-                    <img alt='' className='navbar-links-icons-navbar' style="height: 1.4rem; width: auto; margin-right: 0.5rem; border-radius: 15px;" src='./Assets/images/HomeImages/linkedin.jpg' />
                     <a class="nav-a" target="_blank" href="https://www.linkedin.jpg/company/shaded-feather-productions/mycompany/">LinkedIn</a>
                 </div>
                 <div class="social-link-holder">
-                    <img alt='' className='navbar-links-icons-navbar' style="height: 1.4rem; width: auto; margin-right: 0.5rem; border-radius: 15px;" src='./Assets/images/HomeImages/fb.jpg' />
                     <a class="nav-a" target="_blank" href="https://www.facebook.com/shadedfeather/">Facebook</a>
                 </div>
             </div>
@@ -86,7 +82,7 @@
                     </video>
                 </div>
                 <div class="bottom-text">
-                    <div class="link">VIEW VIDEOS</div>
+                    <div class="link">FILMS</div>
                 </div>
                 <a href="./films.html" class="project-link-full"></a>
             </div>
@@ -103,7 +99,7 @@
                     </video>
                 </div>
                 <div class="bottom-text">
-                    <div class="link">VIEW ANIMATIONS AND CG</div>
+                    <div class="link">ANIMATIONS AND CG</div>
                 </div>
                 <a href="./animations.html" class="project-link-full"></a>
             </div>
@@ -116,7 +112,7 @@
             <div class="boxy img-box">
                 <div class="img"><img src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 6.11.15 PM.png" alt=""></div>
                 <div class="bottom-text">
-                    <div class="link">VIEW PHOTOS</div>
+                    <div class="link">PHOTOGRAPHY</div>
                 </div>
                 <a href="./photography.html" class="project-link-full"></a>
             </div>
@@ -125,7 +121,7 @@
             <div class="boxy img-box">
                 <div class="img"><img src="./Assets/images/HomeImages/giphy.gif" alt=""></div>
                 <div class="bottom-text">
-                    <div class="link">VIEW MICROCONTENT</div>
+                    <div class="link">MICRO - CONTENT</div>
                 </div>
                 <a href="./microcontent.html" class="project-link-full"></a>
             </div>
@@ -135,7 +131,7 @@
 <div class="container-fluid other-content">
     <div class="row">
         <div class="col">
-            <div class="lg-text">have a project<br>for us?</div>
+            <div class="lg-text">got a brief<br>for us?</div>
             <div class="normal-text">
                 <p class="description">We'll take your campaign to the next level, with our proven planning, Structuring and friendly creatives that will work to produce the best out of the box outcome possible.
                 </p>
