--- a/contact.html
+++ b/contact.html
@@ -38,26 +38,22 @@
 <nav class="container-fluid cnav">
     <div class="row">
         <div class="col">
-            <div class="logo-holder other-pages-nav">
+            <div class="other-pages-nav">
                 <a href="index.html"><img class="logo-other-pages" src="./Assets/images/Logo/logo.png" alt="shaded feather logo"></a>
             </div>
         </div>
         <div class="col text-right">
             <div class="social-media">
                 <div class="social-link-holder">
-                    <img alt='' className='navbar-links-icons-navbar' style="height: 1.4rem; width: auto; margin-right: 0.5rem; background-color: white; border-radius: 15px;" src='./Assets/images/HomeImages/vimeo.jpg' />
                     <a class="nav-a" target="_blank" href="https://vimeo.com/shadedfeather">Vimeo</a>
                 </div>
                 <div class="social-link-holder">
-                    <img alt='' className='navbar-links-icons-navbar' style="height: 1.4rem; width: auto; margin-right: 0.5rem; border-radius: 15px;" src='./Assets/images/HomeImages/instagram.jpg' />
                     <a class="nav-a" target="_blank" href="https://www.instagram.com/theshadedfeather/">Instagram</a>
                 </div>
                 <div class="social-link-holder">
-                    <img alt='' className='navbar-links-icons-navbar' style="height: 1.4rem; width: auto; margin-right: 0.5rem; border-radius: 15px;" src='./Assets/images/HomeImages/linkedin.jpg' />
                     <a class="nav-a" target="_blank" href="https://www.linkedin.jpg/company/shaded-feather-productions/mycompany/">LinkedIn</a>
                 </div>
                 <div class="social-link-holder">
-                    <img alt='' className='navbar-links-icons-navbar' style="height: 1.4rem; width: auto; margin-right: 0.5rem; border-radius: 15px;" src='./Assets/images/HomeImages/fb.jpg' />
                     <a class="nav-a" target="_blank" href="https://www.facebook.com/shadedfeather/">Facebook</a>
                 </div>
             </div>
@@ -78,12 +74,20 @@
         </div>
     </div>
 </header>
+<div class="container-fluid other-content" style="background-color: white;">
+    <div class="row">
+        <div class="col">
+            <div class="lg-text" style="color:rgba(0, 0, 0, 0.921)">got a brief for us</div>
+        </div>
+    </div>
+</div>
 <div class="container-fluid box-content">
     <div class="row">
         <div class="col-md-6">
                 <div class="boxy simple-data c1-color">
                     <div class="slg-text">
-                        <span>Got a brief for us??? </span>
+                        <!-- <span>Got a brief for us??? </span> -->
+                        <span class="contact-heading">write to us</span>
                     </div>
                     <div class="normal-lg-text">
                         <p class="description-contact">reachus@shadedfeather.com</p>
@@ -94,7 +98,7 @@
         <div class="col-md-6">
             <div class="boxy simple-data c2-color">
                 <div class="slg-text">
-                    <span>lets have a chat</span>
+                    <span class="contact-heading">maybe a quick call </span>
                 </div>
                 <div class="normal-lg-text">
                     <p>+91 9999251711</p>
@@ -110,13 +114,11 @@
         <div class="col-md-6">
             <div class="boxy simple-data c2-color">
                 <div class="slg-text">
-                    <span>lets catch up</span>
+                    <span class="contact-heading">or catch up over <br> a coffee</span>
                 </div>
                 <div class="normal-lg-text">
                     <h6 style="color: #FFBC59; text-transform: uppercase; font-size: 2.3rem; display: inline;">studio : </h6>
                     <p>Plot BR -15, Sec 45, Noida, Uttar Pradesh 201303</p>
-                    <h6 style="color: #FFBC59; text-transform: uppercase; font-size: 2.3rem; display: inline;">Reg Add : </h6>
-                    <p>A - 12, 3rd Floor, Vivek Vihar Phase 1, New Delhi 110095</p>
                 </div>
             </div>
         </div>
