--- a/oppo.html
+++ b/oppo.html
@@ -3,15 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shaded Feather - Micro Content</title>
-    <link rel="shortcut icon" href="./Assets/images/Logo/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="./Assets/images/Logo/favicon.ico" type="image/x-icon">
+    <title>Photography Oppo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/fontawesome-all.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/Utils.css">
 </head>
 <body>
+    <style>
+      .img-photography{
+        width: 100%;
+        height: auto;
+      }
+    </style>
 <div class="menu-toggle">
     <div class="icon"></div>
 </div>
@@ -35,27 +39,26 @@
         <div class="social-link-holder"><a target="_blank" href="https://www.facebook.com/shadedfeather/">Facebook</a></div>
     </div>
 </div>
-<div class="complete-project">
-    <div class="photos-side-headings">landscape</div>
-    <div class="photos-grid-div">
-        <div class=""><img loading='lazy' class="microcontent-img" src="./Assets/images/HomeImages/giphy.gif" alt=""></div>
-        <div class=""><img loading='lazy' class="microcontent-img" src="./Assets/images/HomeImages/giphy.gif" alt=""></div>
-        <div class=""><img loading='lazy' class="microcontent-img" src="./Assets/images/HomeImages/giphy.gif" alt=""></div>
-        <div class=""><img loading='lazy' class="microcontent-img" src="./Assets/images/HomeImages/giphy.gif" alt=""></div>
-        <div class=""><img loading='lazy' class="microcontent-img" src="./Assets/images/HomeImages/giphy.gif" alt=""></div>
+<div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-interval="2000">
+        <img class="img-photography" src="./Assets/wetransfer_images_2023-01-16_1340/Images/img1.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item" data-bs-interval="2000">
+        <img class="img-photography" src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 4.13.25 PM.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img class="img-photography" src="./Assets/wetransfer_images_2023-01-16_1340/Images/img17.png" class="d-block w-100" alt="...">
+      </div>
     </div>
-    <div class="photos-side-headings">vertical</div>
-    <div class="photos-grid-div">
-        <div class=""><img loading='lazy' class="microcontent-img" src="./Assets/images/HomeImages/giphy.gif" alt=""></div>
-        <div class=""><img loading='lazy' class="microcontent-img" src="./Assets/images/HomeImages/giphy.gif" alt=""></div>
-        <div class=""><img loading='lazy' class="microcontent-img" src="./Assets/images/HomeImages/giphy.gif" alt=""></div>
-    </div>
-    <div class="photos-side-headings">square</div>
-    <div class="photos-grid-div">
-        <div class=""><img loading='lazy' class="microcontent-img" src="./Assets/images/HomeImages/giphy.gif" alt=""></div>
-        <div class=""><img loading='lazy' class="microcontent-img" src="./Assets/images/HomeImages/giphy.gif" alt=""></div>
-        <div class=""><img loading='lazy' class="microcontent-img" src="./Assets/images/HomeImages/giphy.gif" alt=""></div>
-    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
 </div>
 <div class="container-fluid other-content">
     <div class="row">
@@ -101,5 +104,6 @@
 <script src="js/anime.min.js"></script>
 <script src="js/scrollreveal.min.js"></script>
 <script src="js/main.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
